# Dummyload-RS

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: devices.rs  main.rs  units.rs
src/devices/: fan_controller.rs  mod.rs
src/tasks/: cooling.rs  fan_speed.rs  hardware_tasks.rs  mod.rs  temperature.rs
