[package]
name = "dummyload-rs"
version = "0.1.0"
edition = "2021"

# Installation
# cargo install espup
# espup install
# cargo install espflash

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://nereux.blog/posts/esp32-ws2812-dino-light-2/
# https://github.com/esp-rs/esp-hal/blob/main/esp32-hal/Cargo.toml

[dependencies]
esp32-hal = { version = "0.12.0", features = [ "embassy", "async", "rt", "embassy-time-timg0" ] }
esp-backtrace = { version = "0.7.0", features = [ "esp32", "panic-handler", "exception-handler", "print-uart" ] }
esp-println = { version = "0.5.0", features = [ "esp32" ] }

embassy-executor = { version = "0.2.0", features = [ "nightly", "integrated-timers", "arch-xtensa", "executor-thread" ] }
embassy-time = { version = "0.1.1", features = [ "nightly" ] }
embedded-hal = "1.0.0-alpha.10"
embedded-hal-async = "0.2.0-alpha.1"
embedded-hal-nb = "1.0.0-alpha.2"
static_cell = "1.0.0"

[profile.release]
opt-level = 3
lto="off"