[package]
name = "dummyload-rs"
version = "0.1.0"
authors = ["Florian Porsch <tederean@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.1", features = [
    "esp32",
    "embassy",
    "embassy-executor-thread",
    "embassy-time-timg0",
    "async",
    "embedded-hal-nb",
    "embedded-hal-async",
    "embedded-hal-1",
] }
esp-println = { version = "0.9.1", features = [
    "esp32",
] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "executor-thread",
] }
embassy-time = { version = "0.3.0", features = [] }
embassy-sync = { version = "0.6.0", features = [] }
embassy-futures = { version = "0.1.1", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
embedded-hal-async = { version = "1.0.0", features = [] }
embedded-hal-nb = { version = "1.0.0", features = [] }
uom = { version = "0.36.0", default-features = false, features = [
    "si",
    "f32"
] }
refinement = { git = "https://github.com/Tederean/refinement-rs" }
onewire = "0.3.13"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
